# bitbucket-mcp-server

./: .gitignore  .npmignore  Cargo.toml  README.md  index.js  package.json
.github/: dependabot.yml
.github/workflows/: auto-release.yml  release.yml
docs/: API.md  ARCHITECTURE.md  BUILD.md  SEO-CHECKLIST.md  SEO.md  SOCIAL-TEMPLATES.md  STRATEGY-SUMMARY.md  TROUBLESHOOTING.md
src/: auth.rs  config.rs  lib.rs  main.rs  mcp.rs  permission.rs  types.rs
src/api/: branches.rs  commits.rs  error.rs  files.rs  mod.rs  projects.rs  pull_requests.rs  repositories.rs
